--- a/style.max.css
+++ b/style.max.css
@@ -242,7 +242,7 @@ input:focus {
     height: 150px;
     margin: 0px 0px;
     padding: 0 75px;
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
     justify-content: center;
