--- a/style.max.css
+++ b/style.max.css
@@ -722,7 +722,15 @@ footer {
 
 
 
-
+.new-dwn-item{
+    font-size: 11px;
+    background-color: red;
+    width: 60px;
+    color: aliceblue;
+    padding: 4px;
+    border-radius: 10px;
+    text-align: center;
+}
 .fa-youtube{
     color: red;
 }
